Completed Testing us.the.mac.library.demo.androidjni.MainProvider#loadAPIKey

--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Android Jni</string>
+    <string name="app_name">Android Jni Helpers</string>
 </resources>
